# myjson

./: .gitignore  CMakeLists.txt  README.md
demo/: main.cpp
include/: myjson.hpp  parsing.hpp  serializing.hpp  utility.hpp
src/: parsejson.cpp  serializing.cpp  utility.cpp
